- Making timeline a flex box with column to ensure elements of the timeline do not overlap

--- a/timeline_style.css
+++ b/timeline_style.css
@@ -7,6 +7,8 @@
   margin: 0 auto;
   padding: 15px 0;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 
 }
 
